<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.DangnhapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo" />
    </LinearLayout>
    <TextView
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:text="Tài Khoản:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edttk"
            android:hint="Username" />
    </LinearLayout>
<TextView
    android:textSize="20sp"
    android:textColor="@android:color/black"
    android:layout_marginTop="24dp"
    android:text="Mật Khẩu:"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:hintEnabled="false"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edtmk"
                android:layout_height="wrap_content"
                android:hint="Password" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chkpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nhớ mật khẩu"
            android:layout_marginBottom="20dp"
            android:textSize="20sp" />

        <Button
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="#FA0008"
            android:hint="@string/Login_login"
            android:onClick="dangnhap" />

        <TextView
            android:textSize="20sp"
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="170dp"
            android:layout_marginRight="60dp"
            android:hint="@string/splash_or" />

        <Button
            android:textSize="20sp"
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="#0544FF"
            android:textColor="@color/colorWhite"
            android:hint="@string/Login_login2"
            android:onClick="dangnhap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">


        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="0dp"
            android:text="@string/signup"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>